<resources>
    <string name="app_name">Account Manager</string>

    <string name="EnterPIN">Enter Your Security PIN</string>
    <string name="ChangePIN">Change PIN</string>
    <string name="account_manager">Account\nManager</string>
    <string name="analysis_nreport">Analysis\nReport</string>
    <string name="generate_nreport">Generate\nReport</string>

    <string name="PersonInfo">Add Person Information</string>

    <string name="EnterName">Enter Name</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Date">Date</string>
    <string name="Address">Address</string>

    <string name="Name">Name :</string>
    <string name="OpeningDate">Opening Date :</string>
    <string name="Number">Number :</string>
    <string name="Address_">Address :</string>

    <string name="PersonDetails">Person Details</string>
    <string name="AddTransaction">Add Transaction</string>

    <string name="Credit">Credit ( + )</string>
    <string name="Debit">Debit ( - )</string>

    <string name="BalanceAmount">Balance Amount :</string>

    <string name="reportnote">Note :this report work properly if dates between same month.</string>
</resources>
