<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/ic_close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/PersonDetails"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <RelativeLayout
                android:id="@+id/editimg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/deleteimg"
                android:padding="2dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:drawable/ic_menu_edit" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/deleteimg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:padding="2dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:drawable/ic_menu_delete" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/Name"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/partyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tx"
                android:padding="3dp"
                android:text="Mitul Kheni"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textStyle="bold"
                android:typeface="serif" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/partynumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="9876543210"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/partynumber"
                android:background="@android:drawable/ic_menu_call" />

        </RelativeLayout>

        <TextView
            android:id="@+id/partyaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="15/25 apparment."
            android:textColor="#000000" />

        <TextView
            android:id="@+id/opendate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="Opening date : DD-mmm-YYYY"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/crdbt_amt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text=""
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/balanceamt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text=" "
            android:textColor="#000000"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b3b3b3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/colorPrimaryNew"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/AddTransaction"
            android:textColor="#000000"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/amtgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:id="@+id/credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/Credit"
                android:textColor="#000"
                android:typeface="serif" />

            <RadioButton
                android:id="@+id/debit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Debit"
                android:textColor="#000"
                android:typeface="serif" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/edtamt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:hint="Enter Amount"
                android:inputType="numberDecimal"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edtdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/date_bg"
                android:inputType="datetime"
                android:padding="10dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:hint="Enter Note"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_back_all"
                android:text="Add"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <Button
                android:id="@+id/btnshareinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_back_all"
                android:text="Share"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold"
                android:typeface="serif"/>
        </LinearLayout>

        <TableLayout
            android:id="@+id/tbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" />

        <Button
            android:id="@+id/btnpdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_back_all"
            android:text="Generate Report"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="18dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
